fix overflow and alignment issues

--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -17,12 +17,14 @@ x3proofer-panorama {
     width: 100vw;
     overflow: hidden;
     white-space: nowrap;
+    display: block;
 
     > * {
         display: inline-block;
         width: 100%;
         position: relative;
         transition: transform .5s;
+        vertical-align: top;
     }
 
     &[view="proofer"] > * {
